adding particle system creates error in rigid body #59449

Closed
opened 2018-12-16 10:22:58 +01:00 by fra are · 8 comments

System Information
Operating system: win 7 64bit
Graphics card: nvidia gtx980 + gtx780

Blender Version
Broken:
2.80 (sub 37), branch: blender2.8, commit date: 2018-12-16 00:27, hash: 4488056f3d, type: Release
build date: 15/12/2018, 20:45
Worked: 279

Short description of error
impossible to handle the rigid body after adding the particle system

Exact steps for others to reproduce the error
add plane, passive rigid body
add cube, active rigid body
plays -> ok works well
If we add the particle system to the cube, the animation is incorrect
watch the video
2018-12-16 10-11-15.mp4

or blend file
particle and rigid body.blend

System Information Operating system: win 7 64bit Graphics card: nvidia gtx980 + gtx780 **Blender Version** Broken: 2.80 (sub 37), branch: blender2.8, commit date: 2018-12-16 00:27, hash: 4488056f3d9, type: Release build date: 15/12/2018, 20:45 Worked: 279 **Short description of error** impossible to handle the rigid body after adding the particle system **Exact steps for others to reproduce the error** add plane, passive rigid body add cube, active rigid body plays -> ok works well If we add the particle system to the cube, the animation is incorrect watch the video [2018-12-16 10-11-15.mp4](https://archive.blender.org/developer/F5969885/2018-12-16_10-11-15.mp4) or blend file [particle and rigid body.blend](https://archive.blender.org/developer/F5969897/particle_and_rigid_body.blend)
Author

Added subscriber: @FrancescoArena

Added subscriber: @FrancescoArena
Sergej Reich was assigned by Sebastian Parborg 2018-12-17 16:37:00 +01:00

Added subscribers: @mont29, @Sergey

Added subscribers: @mont29, @Sergey

Seems like another depsgraph problem, @mont29 or @Sergey should look at this.

Seems like another depsgraph problem, @mont29 or @Sergey should look at this.
Sergej Reich removed their assignment 2018-12-18 18:28:37 +01:00

Added subscriber: @sreich

Added subscriber: @sreich

Added subscriber: @you.le

Added subscriber: @you.le

This is surely not a proper fix but it is just meant to indicate to the depsgraph that if we're doing a rigidbody simulation, I guess before building particle system we have to sync object transformation with rigidbody object tranformation:

p.diff

This is surely not a proper fix but it is just meant to indicate to the depsgraph that if we're doing a rigidbody simulation, I guess before building particle system we have to sync object transformation with rigidbody object tranformation: [p.diff](https://archive.blender.org/developer/F6599292/p.diff)
Sergey Sharybin self-assigned this 2019-02-13 14:24:20 +01:00

This issue was referenced by 3508ffc34c

This issue was referenced by 3508ffc34c1f742e6a798814b80075ccbe1baa22

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59449
No description provided.